add header scss

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,4 +1,6 @@
-@use 'partials/mixins' as *;
+@use "partials/mixins" as *;
+@use "partials/header" as *;
+@use "partials/fonts" as *;
 
 *, *::before, *::after {
     box-sizing: border-box;
