--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,18 +1,3 @@
 *, *::before, *::after {
-    box-sizing: border-box;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-content: flex-end;
-    background-color: #323232;
-    padding: 1rem;
-    text-align: center;
-}
-
-@media (min-width: 768px) {
-    .navbar {
-        display: flex;
-    }
-}
+  box-sizing: border-box;
+}/*# sourceMappingURL=bio.css.map */
