--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,3 +1,118 @@
+@font-face {
+  font-family: "AvenirNext LT Pro";
+  src: url("../../assets/fonts/AvenirNextLTPro-Bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "AvenirNext LT Pro";
+  src: url("../../assets/fonts/AvenirNextLTPro-Demi.otf") format("opentype");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "AvenirNext LT Pro";
+  src: url("../../assets/fonts/AvenirNextLTPro-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+body {
+  font-family: "AvenirNext LT Pro";
+}
+
+header {
+  background-color: #323232;
+  background-size: cover;
+  padding: 1rem;
+  margin: 0;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  color: #FFFFFF;
+}
+@media (min-width: 768px) {
+  .navbar {
+    flex-direction: row;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar {
+    flex-direction: row;
+  }
+}
+
+.navbar__title-container {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  max-height: 1.25rem;
+  max-width: 7.5rem;
+}
+@media (min-width: 768px) {
+  .navbar__title-container {
+    font-size: 3.75rem;
+    flex-direction: row;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar__title-container {
+    font-size: 3.75rem;
+    flex-direction: row;
+  }
+}
+.navbar__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  padding: 0rem;
+  font-size: 0.875rem;
+  font-weight: 600;
+  max-height: 1.375rem;
+}
+@media (min-width: 768px) {
+  .navbar__list {
+    font-size: 1.5rem;
+    max-height: 2rem;
+    flex-direction: row;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar__list {
+    font-size: 1.5rem;
+    max-height: 2rem;
+    flex-direction: row;
+  }
+}
+.navbar__item {
+  margin: 0rem;
+}
+.navbar__second-item {
+  margin: 0rem;
+}
+.navbar__link {
+  color: #AFAFAF;
+  /*justify-content: space-between;
+  align-items: center;*/
+  text-decoration: none;
+  padding: 1rem;
+}
+.navbar__link--active, .navbar__link:hover {
+  /*display: grid;*/
+  border-bottom: 3px solid #FFFFFF;
+  color: #FFFFFF;
+  padding-bottom: 1rem;
+  max-width: 0.875rem;
+}
+.navbar__link:hover {
+  color: #000000;
+  transition: 0.4s;
 }/*# sourceMappingURL=bio.css.map */
