--- a/styles/bio.css
+++ b/styles/bio.css
@@ -28,7 +28,7 @@ header {
   background-color: #323232;
   background-size: cover;
   padding: 1rem;
-  border-bottom: 0.01rem solid #E1E1E1;
+  border-bottom: 0.0625rem stroke #E1E1E1;
 }
 
 .navbar {
@@ -144,27 +144,37 @@ header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 100vh;
+  height: 50vh;
   color: #FFFFFF;
   padding: 1rem;
 }
+@media (min-width: 768px) {
+  .hero-section {
+    height: 140vh;
+  }
+}
+@media (min-width: 1200px) {
+  .hero-section {
+    height: 170vh;
+  }
+}
 .hero-section__hero-title {
-  font-size: 1.5rem;
+  font-size: 2rem;
   line-height: 2rem;
-  font-weight: 700;
+  font-weight: 600;
 }
 @media (min-width: 768px) {
   .hero-section__hero-title {
     font-size: 2.25rem;
     line-height: 2.75rem;
-    font-weight: 700;
+    font-weight: 600;
   }
 }
 @media (min-width: 1200px) {
   .hero-section__hero-title {
     font-size: 2.25rem;
     line-height: 2.75rem;
-    font-weight: 700;
+    font-weight: 600;
   }
 }
 
@@ -176,7 +186,7 @@ header {
 .about-quote__title {
   font-size: 1.5rem;
   line-height: 2rem;
-  font-weight: 700;
+  font-weight: 600;
   padding-top: 1.5rem;
   padding-bottom: 1rem;
   margin: 0rem 1rem;
@@ -185,56 +195,53 @@ header {
   .about-quote__title {
     font-size: 2.25rem;
     line-height: 2.75rem;
-    font-weight: 700;
+    font-weight: 600;
     padding-top: 3rem;
-    padding-bottom: 2.25rem;
+    margin-bottom: 1rem;
   }
 }
 @media (min-width: 1200px) {
   .about-quote__title {
     font-size: 2.25rem;
     line-height: 2.75rem;
-    font-weight: 700;
+    font-weight: 600;
     padding-top: 3rem;
-    padding-bottom: 2.25rem;
+    margin-bottom: 1rem;
   }
 }
 .about-quote__container {
   display: flex;
   flex-direction: column;
   margin: 0rem 1rem;
-  padding-bottom: 1rem;
 }
 @media (min-width: 768px) {
   .about-quote__container {
-    margin: 2.25rem;
-    padding-bottom: 2.25rem;
+    margin: 0rem 6rem;
   }
 }
 @media (min-width: 1200px) {
   .about-quote__container {
-    margin: auto;
-    padding-bottom: 2.25rem;
+    margin: 0rem 14rem;
   }
-}
-.about-quote__image {
-  margin: 0rem;
 }
 .about-quote__by-vocalist {
   font-size: 0.875rem;
   line-height: 1.375rem;
   font-weight: 600;
+  margin-bottom: -0.5rem;
 }
 @media (min-width: 768px) {
   .about-quote__by-vocalist {
     font-size: 1.5rem;
     max-height: 2rem;
+    margin-bottom: 2rem;
   }
 }
 @media (min-width: 1200px) {
   .about-quote__by-vocalist {
     font-size: 1.5rem;
     max-height: 2rem;
+    margin-bottom: 1rem;
   }
 }
 .about-quote__vocalist-name {
@@ -253,4 +260,137 @@ header {
     font-size: 1.5rem;
     max-height: 2rem;
   }
+}
+
+.about-musicians {
+  display: flex;
+  flex-direction: column;
+  background-color: #FFFFFF;
+  margin: 0rem 1rem;
+}
+.about-musicians__title {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 600;
+}
+@media (min-width: 768px) {
+  .about-musicians__title {
+    font-size: 1.5rem;
+    max-height: 2rem;
+    margin: 2rem 5rem 1rem 5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .about-musicians__title {
+    font-size: 1.5rem;
+    max-height: 2rem;
+    margin: 2rem 13rem 1rem 13rem;
+  }
+}
+
+.paragraph-section {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0rem 1rem;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .paragraph-section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0rem 5rem 1rem 6rem;
+  }
+}
+@media (min-width: 1200px) {
+  .paragraph-section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0rem 14rem 1rem 14rem;
+  }
+}
+.paragraph-section__paragraph {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+@media (min-width: 768px) {
+  .paragraph-section__paragraph {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+@media (min-width: 1200px) {
+  .paragraph-section__paragraph {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+
+.photo-gallery-section {
+  background-color: #FAFAFA;
+  background-size: cover;
+}
+
+.photo-title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+  padding-top: 1rem;
+  margin: 0.5rem 1rem -0.5rem 1rem;
+}
+@media (min-width: 768px) {
+  .photo-title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    padding-top: 3rem;
+    margin: 0.5rem 1rem -0.5rem 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .photo-title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    padding-top: 3rem;
+    margin: 2rem 1rem 1rem 6rem;
+  }
+}
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .gallery {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 1200px) {
+  .gallery {
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0rem 5rem;
+  }
+}
+.gallery__item {
+  padding: 1rem;
+}
+@media (min-width: 768px) {
+  .gallery__item {
+    width: 33%;
+  }
+}
+@media (min-width: 1200px) {
+  .gallery__item {
+    width: 33%;
+  }
+}
+.gallery__image {
+  width: 100%;
 }/*# sourceMappingURL=bio.css.map */
