--- a/styles/bio.css
+++ b/styles/bio.css
@@ -43,6 +43,7 @@ header {
     flex-direction: row;
     justify-content: left;
     align-items: center;
+    margin: 0rem 1rem 0rem 2rem;
   }
 }
 @media (min-width: 1200px) {
@@ -50,6 +51,7 @@ header {
     flex-direction: row;
     justify-content: left;
     align-items: center;
+    margin: 0rem 1rem 0rem 6rem;
   }
 }
 
@@ -57,7 +59,8 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: 700;
   max-height: 1.25rem;
   max-width: 7.5rem;
@@ -65,14 +68,17 @@ header {
 @media (min-width: 768px) {
   .navbar__title-container {
     font-size: 3.75rem;
+    line-height: 4.25rem;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 1rem;
   }
 }
 @media (min-width: 1200px) {
   .navbar__title-container {
     font-size: 3.75rem;
+    line-height: 4.25rem;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -168,6 +174,7 @@ header {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 600;
+    margin: 0rem 1rem 0rem 2rem;
   }
 }
 @media (min-width: 1200px) {
@@ -175,6 +182,7 @@ header {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 600;
+    margin: 2rem 1rem 1rem 6rem;
   }
 }
 
@@ -197,7 +205,7 @@ header {
     line-height: 2.75rem;
     font-weight: 600;
     padding-top: 3rem;
-    margin-bottom: 1rem;
+    margin: 0rem 1rem 0rem 2rem;
   }
 }
 @media (min-width: 1200px) {
@@ -206,7 +214,7 @@ header {
     line-height: 2.75rem;
     font-weight: 600;
     padding-top: 3rem;
-    margin-bottom: 1rem;
+    margin: 2rem 1rem 1rem 6rem;
   }
 }
 .about-quote__container {
@@ -291,25 +299,24 @@ header {
 .paragraph-section {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   margin: 0rem 1rem;
   justify-content: center;
   align-items: center;
 }
 @media (min-width: 768px) {
   .paragraph-section {
-    display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    margin: 0rem 5rem 1rem 6rem;
+    justify-content: space-around;
+    margin: 0rem 8rem 1rem 5rem;
+    padding: 1rem;
   }
 }
 @media (min-width: 1200px) {
   .paragraph-section {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    margin: 0rem 14rem 1rem 14rem;
+    justify-content: space-around;
+    margin: 0rem 10rem 1rem 10rem;
   }
 }
 .paragraph-section__paragraph {
@@ -348,7 +355,7 @@ header {
     line-height: 2.75rem;
     font-weight: 600;
     padding-top: 3rem;
-    margin: 0.5rem 1rem -0.5rem 1rem;
+    margin: 0.5rem 2rem 0.5rem 2rem;
   }
 }
 @media (min-width: 1200px) {
@@ -369,6 +376,7 @@ header {
   .gallery {
     flex-direction: row;
     flex-wrap: wrap;
+    margin: 0rem 1rem;
   }
 }
 @media (min-width: 1200px) {
@@ -393,4 +401,209 @@ header {
 }
 .gallery__image {
   width: 100%;
+}
+
+footer {
+  background-color: #323232;
+  padding: 1rem;
+  color: #FFFFFF;
+}
+
+.social-section {
+  display: flex;
+}
+.social-section__title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+@media (min-width: 768px) {
+  .social-section__title {
+    flex-direction: row;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    padding-top: 2rem;
+    margin: 0rem 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .social-section__title {
+    flex-direction: row;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    margin: 0rem 5rem;
+  }
+}
+
+.social-links {
+  display: flex;
+  padding: 0rem;
+  margin-left: -1rem;
+  justify-content: left;
+  align-items: center;
+  flex-direction: row;
+}
+@media (min-width: 768px) {
+  .social-links {
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: -3rem;
+    margin-left: -6rem;
+  }
+}
+@media (min-width: 1200px) {
+  .social-links {
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: -3rem;
+    margin-left: -25rem;
+  }
+}
+.social-links__image {
+  flex-direction: row;
+  padding: 1rem;
+  flex-grow: 2;
+}
+
+.bandsite-agents-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0rem;
+}
+@media (min-width: 768px) {
+  .bandsite-agents-info {
+    flex-direction: row;
+  }
+}
+@media (min-width: 1200px) {
+  .bandsite-agents-info {
+    flex-direction: row;
+  }
+}
+.bandsite-agents-info__name {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 600;
+  flex-direction: row;
+  margin: 1rem 1rem -1rem 0rem;
+}
+@media (min-width: 768px) {
+  .bandsite-agents-info {
+    flex-direction: row;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding-top: 0rem;
+    margin: 0rem 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .bandsite-agents-info {
+    flex-direction: row;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding-top: 0rem;
+    margin: 0rem 1rem;
+  }
+}
+.bandsite-agents-info__title {
+  flex-direction: row;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 600;
+}
+@media (min-width: 768px) {
+  .bandsite-agents-info {
+    flex-direction: row;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding-top: 0rem;
+    margin: 0rem 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .bandsite-agents-info {
+    flex-direction: row;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    padding-top: 0rem;
+    margin: 0rem 1rem;
+  }
+}
+.bandsite-agents-info__address {
+  flex-direction: row;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+}
+@media (min-width: 768px) {
+  .bandsite-agents-info {
+    flex-direction: row;
+  }
+}
+@media (min-width: 1200px) {
+  .bandsite-agents-info {
+    flex-direction: row;
+  }
+}
+.bandsite-agents-info__address__two {
+  margin-top: -1rem;
+}
+.bandsite-agents-info__email {
+  flex-direction: row;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+}
+
+.bandsite-title {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 4rem 0rem 1rem 0rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+  max-height: 1.25rem;
+  max-width: 7.5rem;
+}
+@media (min-width: 768px) {
+  .bandsite-title {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    flex-direction: row;
+    margin: -2rem 1rem 0rem 1rem;
+    padding-bottom: 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .bandsite-title {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    flex-direction: row;
+  }
+}
+
+.copyright-section {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+@media (min-width: 768px) {
+  .copyright-section {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    margin: 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .copyright-section {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
 }/*# sourceMappingURL=bio.css.map */
