--- a/styles/bio.css
+++ b/styles/bio.css
@@ -28,12 +28,12 @@ header {
   background-color: #323232;
   background-size: cover;
   padding: 1rem;
-  border-bottom: 0.0625rem stroke #E1E1E1;
+  /*border-bottom: 0.0625rem stroke $color-mercury;*/
 }
 
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   color: #FFFFFF;
@@ -54,11 +54,11 @@ header {
     margin: 0rem 1rem 0rem 6rem;
   }
 }
-
 .navbar__title-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
@@ -70,8 +70,8 @@ header {
     font-size: 3.75rem;
     line-height: 4.25rem;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    width: 20%;
+    margin-right: 0.5rem;
     padding-bottom: 1rem;
   }
 }
@@ -80,62 +80,75 @@ header {
     font-size: 3.75rem;
     line-height: 4.25rem;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    width: 20%;
+    margin-right: -5rem;
   }
 }
 .navbar__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   list-style: none;
-  width: 50%;
+  width: 100%;
   padding: 0rem;
-  font-size: 0.875rem;
+  font-size: 0.75rem;
   font-weight: 600;
   max-height: 1.375rem;
+  padding-top: 0.5rem;
 }
 @media (min-width: 768px) {
   .navbar__list {
-    font-size: 1.5rem;
+    font-size: 1rem;
     max-height: 2rem;
     flex-direction: row;
-    padding: 2rem;
+    width: 80%;
   }
 }
 @media (min-width: 1200px) {
   .navbar__list {
-    font-size: 1.5rem;
+    font-size: 1rem;
     max-height: 2rem;
     flex-direction: row;
-    padding: 2rem;
+    width: 80%;
   }
 }
 .navbar__item {
-  margin: 0rem;
+  width: 50%;
+  margin: auto;
 }
 .navbar__second-item {
-  margin: 0rem;
+  width: 50%;
+  margin: auto;
+}
+@media (min-width: 768px) {
+  .navbar__second-item {
+    margin-left: -13rem;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar__second-item {
+    margin-left: -28rem;
+  }
 }
 .navbar__link {
   color: #AFAFAF;
   text-decoration: none;
-  padding: 0rem;
 }
 .navbar__link--active, .navbar__link:hover {
   border-bottom: 3px solid #FFFFFF;
   color: #FFFFFF;
-  padding-bottom: 1.85rem;
-  max-width: 0.875rem;
+  padding-bottom: 0.85rem;
+  border-width: 50%;
+  /*max-width: 0.875rem;*/
 }
 @media (min-width: 768px) {
   .navbar__link--active, .navbar__link:hover {
-    padding-bottom: 3.5rem;
+    padding-bottom: 1rem;
   }
 }
 @media (min-width: 1200px) {
   .navbar__link--active, .navbar__link:hover {
-    padding-bottom: 3.5rem;
+    padding-bottom: 1rem;
   }
 }
 .navbar__link:hover {
@@ -164,13 +177,13 @@ header {
     height: 170vh;
   }
 }
-.hero-section__hero-title {
+.hero-section__title {
   font-size: 2rem;
   line-height: 2rem;
   font-weight: 600;
 }
 @media (min-width: 768px) {
-  .hero-section__hero-title {
+  .hero-section__title {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 600;
@@ -178,7 +191,7 @@ header {
   }
 }
 @media (min-width: 1200px) {
-  .hero-section__hero-title {
+  .hero-section__title {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 600;
@@ -299,39 +312,55 @@ header {
 .paragraph-section {
   display: flex;
   flex-direction: column;
-  margin: 0rem 1rem;
-  justify-content: center;
+  margin: 0rem 0rem;
+  /*justify-content: center;*/
   align-items: center;
 }
 @media (min-width: 768px) {
   .paragraph-section {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 0rem 8rem 1rem 5rem;
-    padding: 1rem;
   }
 }
 @media (min-width: 1200px) {
   .paragraph-section {
-    display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    margin: 0rem 10rem 1rem 10rem;
+    justify-content: space-between;
+    margin: 0rem 13rem 1rem 13rem;
   }
 }
-.paragraph-section__paragraph {
+.paragraph-section__paragraph-left {
   font-size: 0.8125rem;
   line-height: 1.125rem;
   font-weight: 400;
 }
 @media (min-width: 768px) {
-  .paragraph-section__paragraph {
+  .paragraph-section__paragraph-left {
     font-size: 0.875rem;
     line-height: 1.375rem;
   }
 }
 @media (min-width: 1200px) {
-  .paragraph-section__paragraph {
+  .paragraph-section__paragraph-left {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+  }
+}
+.paragraph-section__paragraph-right {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+@media (min-width: 768px) {
+  .paragraph-section__paragraph-right {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    margin-left: 2rem;
+  }
+}
+@media (min-width: 1200px) {
+  .paragraph-section__paragraph-right {
     font-size: 0.875rem;
     line-height: 1.375rem;
   }
