--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -14,13 +14,13 @@ header {
     background-color: $color-bandsite-black;
     background-size: cover;
     padding: 1rem;
-    border-bottom: 0.0625rem stroke $color-mercury;  
+    /*border-bottom: 0.0625rem stroke $color-mercury;*/ 
 }
 
 .navbar {
-    display: flex; 
-    justify-content: space-between;
-    align-items: center; 
+    display: flex;
+    justify-content: center; 
+    align-items: center;
     flex-direction: column;
     color: $color-white; 
     @include tablet {
@@ -35,73 +35,82 @@ header {
         align-items: center;
         margin: 0rem 1rem 0rem 6rem;
     }
-}
-
-.navbar {
     &__title-container {
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
         @include page-header-mobile-logo;
         @include tablet {
             font-size: 3.75rem;
             line-height: 4.25rem;
             flex-direction: row;
-            justify-content: space-between;
-            align-items: center; 
-            padding-bottom: 1rem; 
+            width: 20%;
+            margin-right: 0.5rem;
+            padding-bottom: 1rem;
         }
         @include desktop {
             font-size: 3.75rem;
             line-height: 4.25rem;
             flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
+            width: 20%;
+            margin-right: -5rem;
         }
     }
     &__list {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         list-style: none;
-        width: 50%;
+        width: 100%;
         padding: 0rem;
-        font-size: 0.875rem;
+        font-size: 0.75rem;
         font-weight: 600;
         max-height: 1.375rem;
+        padding-top: 0.5rem;
         @include tablet {
-            font-size: 1.5rem;
+            font-size: 1rem;
             max-height: 2rem;
             flex-direction: row;
-            padding: 2rem;
+            width: 80%;
+   
         }
         @include desktop {
-            font-size: 1.5rem;
+            font-size: 1rem;
             max-height: 2rem;
             flex-direction: row;
-            padding: 2rem;
+            width: 80%;
         } 
     }
     &__item {
-        margin: 0rem;
+        width: 50%;
+        margin: auto;    
     }
     &__second-item {
-        margin: 0rem;
+        width: 50%;
+        margin: auto;
+        @include tablet {
+            margin-left: -13rem;
+        }
+        @include desktop {
+            margin-left: -28rem;
+        }
     }
     &__link {
         color: $color-silver;
         text-decoration: none;
-        padding: 0rem;
         &--active {
             border-bottom: 3px solid $color-white;
             color: $color-white;
-            padding-bottom: 1.85rem;
-            max-width: 0.875rem;
+            padding-bottom: 0.85rem;
+            border-width: 50%;
+            /*max-width: 0.875rem;*/
+            
             @include tablet {
-                padding-bottom: 3.5rem;
+                padding-bottom: 1rem;
             }
             @include desktop {
-                padding-bottom: 3.5rem;
+                padding-bottom: 1rem;
             }
         }
 
@@ -129,7 +138,7 @@ header {
     @include desktop {
         height: 170vh;
     }
-    &__hero-title {
+    &__title {
         font-size: 2rem;
         line-height: 2rem; 
         font-weight: 600;
@@ -241,22 +250,25 @@ header {
 .paragraph-section {
     display: flex;
     flex-direction: column;
-    margin: 0rem 1rem;
-    justify-content: center;
+    margin: 0rem 0rem;
+    /*justify-content: center;*/
     align-items: center;
+   
+    
+    
     @include tablet {
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         margin: 0rem 8rem 1rem 5rem; 
-        padding:1rem;
+       
+       
     }
     @include desktop {
-        display: flex;
         flex-direction: row;
-        justify-content: space-around;
-        margin: 0rem 10rem 1rem 10rem; 
+        justify-content: space-between;
+        margin: 0rem 13rem 1rem 13rem; 
     }
-    &__paragraph {
+    &__paragraph-left {
         font-size: 0.8125rem;
         line-height: 1.125rem;
         font-weight: 400;
@@ -269,7 +281,22 @@ header {
             line-height: 1.375rem;
         }
     }
-}
+    &__paragraph-right {
+        font-size: 0.8125rem;
+        line-height: 1.125rem;
+        font-weight: 400;
+        @include tablet {
+            font-size: 0.875rem;
+            line-height: 1.375rem;
+            margin-left: 2rem;
+        }
+        @include desktop {
+            font-size: 0.875rem;
+            line-height: 1.375rem;
+        }
+        }
+    }
+
 
 .photo-gallery-section {
     background-color: $color-alabaster;
