--- a/styles/bio.css
+++ b/styles/bio.css
@@ -386,7 +386,7 @@ header {
   line-height: 2rem;
   font-weight: 600;
   padding-top: 1rem;
-  margin: 0.5rem 1rem -0.5rem 0rem;
+  margin: 0.5rem 1rem -0.5rem 1rem;
 }
 @media (min-width: 768px) {
   .photo-title {
@@ -410,7 +410,7 @@ header {
 .gallery {
   display: flex;
   flex-direction: column;
-  margin: 0rem -1rem;
+  margin: 0rem;
 }
 @media (min-width: 768px) {
   .gallery {
