--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -310,7 +310,7 @@ header {
     line-height: 2rem;
     font-weight: 600;
     padding-top: 1rem;
-    margin: 0.5rem 1rem -0.5rem 0rem;
+    margin: 0.5rem 1rem -0.5rem 1rem;
     @include tablet {
         font-size: 2.25rem;
         line-height: 2.75rem;
@@ -330,7 +330,7 @@ header {
 .gallery {
     display: flex;
     flex-direction: column;
-    margin: 0rem -1rem;
+    margin: 0rem;
     @include tablet {
         flex-direction: row;
         flex-wrap: wrap;
